# cw-academy

counting-contract/: Cargo.toml
counting-contract/schema/: counting-contract.json
counting-contract/src/: contract.rs  error.rs  lib.rs  main  main.rs  msg.rs  multitest.rs
counting-contract/src/multitest/: tests.rs
