[package]
name = "counting-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
serde = "1.0.0"
cw-storage-plus = "0.13.4"
schemars = "0.8.11"
cosmwasm-schema = "1.1.5"
thiserror = "1.0.37"
cw-multi-test = { version = "0.14.0", optional = true }

[features]
library = []
tests = ["library", "cw-multi-test"]

[dev-dependencies]
cw-multi-test = "0.14.0"
